clean up chat container, fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,6 @@ body {
   background-color: #f5f5f5;
 }
 
-/* .App-logo {
-  height: 40vmin;
-} */
-
 .header {
   background-color: #282c34;
   min-height: 5vh;
@@ -19,28 +15,25 @@ body {
   color: white;
 }
 
-/* .App-link {
-  color: #09d3ac;
-} */
 .container {
   background-color: white;
 }
+
 .msg-wrapper {
   padding-top: 3.25rem;
   min-height: 25rem;
-  max-height: 30em;
 }
-.sidebar,
-.chat-feed,
 .messages {
   padding: 1rem;
-  height: auto;
+  max-height: 25em;
 }
 
 .sidebar {
   border-right: 1px solid #f9f9f9;
   background: rgb(8, 181, 238);
   color: white;
+  padding: 1rem;
+  min-height: 25em;
 }
 .join-chat {
   padding: 3rem 1rem;
